--- a/index.html
+++ b/index.html
@@ -18,6 +18,45 @@
       .catch(err => console.error('❌ Service Worker failed', err));
   }
 </script>
+<script>
+  let deferredPrompt;
+
+  window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault();
+    deferredPrompt = e;
+
+    // Buat tombol install custom
+    const installBtn = document.createElement('button');
+    installBtn.innerText = "⬇️ Pasang Aplikasi";
+    installBtn.style = `
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      padding: 10px 15px;
+      background-color: #1976d2;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+      z-index: 9999;
+      cursor: pointer;
+    `;
+    document.body.appendChild(installBtn);
+
+    installBtn.addEventListener('click', () => {
+      installBtn.remove();
+      deferredPrompt.prompt();
+      deferredPrompt.userChoice.then(choice => {
+        if (choice.outcome === 'accepted') {
+          console.log("✅ Aplikasi diinstall");
+        } else {
+          console.log("❌ Aplikasi batal diinstall");
+        }
+        deferredPrompt = null;
+      });
+    });
+  });
+</script>
 
 <body>
   <header>
